downgrades to java 8 and cleans up pom (#8)